@@ -291,6 +291,10 @@ data.table = function(..., keep.rownames=FALSE, check.names = TRUE, key=NULL)
     } # end of  if !missing(i)
     if (!missing(j)) {
         jsub = substitute(j)
+        jsubl = as.list(jsub)
+        if (identical(jsubl[[1]],quote(eval))) {
+            jsub = eval(jsubl[[2]],parent.frame())  # same reason doing it this way as comment further down for bysub
+        }
         o__ = as.integer(NULL)
         if (with) {
             # j will be evaluated within the frame of data.table, even if it is a single column number or character name, see FAQ 1.1 and 1.2
@@ -309,10 +313,6 @@ data.table = function(..., keep.rownames=FALSE, check.names = TRUE, key=NULL)
                 if (!missing(i)) x = x[irows, nomatch=nomatch, roll=roll, rolltolast=rolltolast, mult=mult]   # note this is a once only recursive call to [.data.table since j is missed here
                 # TO DO: can speed up, when i is present, by not taking a subset of the whole table first, just the grouping columns.
                 if (missing(by)) {
-                    jsubl = as.list(jsub)
-                    if (identical(jsubl[[1]],quote(eval))) {
-                        jsub = eval(jsubl[[2]],parent.frame())  # same reason doing it this way as comment further down for bysubl
-                    }
                     if (mode(jsub)!="name" && as.character(jsub[[1]]) %in% c("list","DT")) {
                         jdep = deparse(jsub)
                         jdep = gsub("^list","data.table",jdep)   # we need data.table here because i) it grabs the column names from objects and ii) it does the vector expansion 
@@ -471,7 +471,7 @@ data.table = function(..., keep.rownames=FALSE, check.names = TRUE, key=NULL)
             # the subset above keeps factor levels in full
             # TO DO: drop factor levels altogether (as option later) ... for (col in 1:ncol(.SD)) if(is.factor(.SD[[col]])) .SD[[col]] = as.integer(.SD[[col]])
             xcols = as.integer(match(vars,colnames(x)))
-            #browser()
+            # browser()
             
             ans = .Call("dogroups",x,.SD,xcols,o__,f__,len__,jsub,new.env(parent=parent.frame()),testj,byretn,byval,verbose,PACKAGE="data.table")
             
